--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --require ts-node/register src",
-    "build": "tsc"
+    "clean": "del-cli \"index.{js,js.map,d.ts}\"",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@types/node": "14.14.21",
+    "del-cli": "3.0.1",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
   }
