--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "/index.d.ts",
     "/index.js",
     "/index.js.map",
-    "/README.md"
+    "/README.md",
+    "/LICENSE"
   ],
   "main": "index.js",
   "types": "index.d.ts",
